--- a/MainAppcation/TaskBarIconByPorxyControl.xaml
+++ b/MainAppcation/TaskBarIconByPorxyControl.xaml
@@ -4,9 +4,16 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:n="clr-namespace:Hardcodet.Wpf.TaskbarNotification;assembly=Hardcodet.NotifyIcon.Wpf">
-      
     <n:TaskbarIcon.ContextMenu>
-        <ContextMenu>
+        <ContextMenu Width="200">
+            <ContextMenu.Resources>
+                <ResourceDictionary>
+                    <ResourceDictionary.MergedDictionaries>
+                        <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml"/>
+                        <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml"/>
+                    </ResourceDictionary.MergedDictionaries>
+                </ResourceDictionary>
+            </ContextMenu.Resources>
             <MenuItem x:Name="IsProxyEnable" Header="开启代理" IsCheckable="True" IsChecked="{Binding IsProxyEnable,Mode=TwoWay}" Click="OnIsEnableProxyClick"/>
             <MenuItem x:Name="AppSetting" Header="参数设置" Click="OnAppSetingClick"/>
             <MenuItem x:Name="AutoStart" Header="开机启动" IsCheckable="True" IsChecked="{Binding IsAutoStart,Mode=TwoWay}"/>
