--- a/MainAppcation/TaskBarIconByPorxyControl.xaml
+++ b/MainAppcation/TaskBarIconByPorxyControl.xaml
@@ -1,9 +1,10 @@
 ﻿<n:TaskbarIcon x:Class="NetProxyController.TaskBarIconByPorxyControl"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:n="clr-namespace:Hardcodet.Wpf.TaskbarNotification;assembly=Hardcodet.NotifyIcon.Wpf">
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+                xmlns:n="clr-namespace:Hardcodet.Wpf.TaskbarNotification;assembly=Hardcodet.NotifyIcon.Wpf"
+               TrayLeftMouseUp="OnAppSetingClick">
     <n:TaskbarIcon.ContextMenu>
         <ContextMenu Width="150">
             <ContextMenu.Resources>
