--- a/MainAppcation/View/NotifyIcon.xaml
+++ b/MainAppcation/View/NotifyIcon.xaml
@@ -1,4 +1,4 @@
-﻿<n:TaskbarIcon x:Class="NetProxyController.TaskBarIconByPorxyControl"
+﻿<n:TaskbarIcon x:Class="NetProxyController.View.NotifyIcon"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
