--- a/MainAppcation/View/NotifyIcon.xaml
+++ b/MainAppcation/View/NotifyIcon.xaml
@@ -3,21 +3,17 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                xmlns:n="clr-namespace:Hardcodet.Wpf.TaskbarNotification;assembly=Hardcodet.NotifyIcon.Wpf">
+                xmlns:n="clr-namespace:Hardcodet.Wpf.TaskbarNotification;assembly=Hardcodet.NotifyIcon.Wpf"
+                xmlns:hc="https://handyorg.github.io/handycontrol"
+                IconSource="{Binding BarIconPath}"
+                ToolTipText="{Binding ToolTipText}"
+                LeftClickCommand="{Binding ShowSettingWndCmd}">
     <n:TaskbarIcon.ContextMenu>
         <ContextMenu Width="150">
-            <ContextMenu.Resources>
-                <ResourceDictionary>
-                    <ResourceDictionary.MergedDictionaries>
-                        <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml"/>
-                        <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml"/>
-                    </ResourceDictionary.MergedDictionaries>
-                </ResourceDictionary>
-            </ContextMenu.Resources>
-            <MenuItem x:Name="IsProxyEnable" Header="开启代理" IsCheckable="True"/>
-            <MenuItem x:Name="AppSetting" Header="参数设置"/>
-            <MenuItem x:Name="AutoStart" Header="开机启动" IsCheckable="True"/>
-            <MenuItem x:Name="Quit" Header="退出"/>
+            <MenuItem Header="开启代理" IsCheckable="True" IsChecked="{Binding ProxyEnableChecked, Mode=TwoWay}"/>
+            <MenuItem Header="参数设置" Command="{Binding ShowSettingWndCmd}"/>
+            <MenuItem Header="开机启动" IsCheckable="True" IsChecked="{Binding AutoStartChecked}"/>
+            <MenuItem Header="退出" Command="{Binding QuitCmd}"/>
         </ContextMenu>
     </n:TaskbarIcon.ContextMenu>
  </n:TaskbarIcon>
