--- a/MainAppcation/View/SettingWindow.xaml
+++ b/MainAppcation/View/SettingWindow.xaml
@@ -11,21 +11,10 @@
         WindowStartupLocation="CenterScreen"
         Closing="Window_Closing"
         Title="参数设置" Height="470" Width="380">
-    <!--<Window.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Window.Resources>-->
-    <Window.DataContext>
-        <local:SettingViewData x:Name="viewData"/>
-    </Window.DataContext>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="250"/>
@@ -56,28 +45,16 @@
                         hc:InfoElement.Placeholder="IP或域名"
                         Grid.Column="1" 
                         PreviewKeyDown="TextboxPortnumber_PreviewKeyDown"
-                        Style="{StaticResource TextBoxPlusBaseStyle}">
-                <TextBox.Text>
-                    <Binding x:Name="HttpPortByBinding" Path="HttpPort" UpdateSourceTrigger="Explicit">
-                        <Binding.ValidationRules>
-                            <local:PortNumberValidationRule/>
-                        </Binding.ValidationRules>
-                    </Binding>
-                </TextBox.Text>
+                        Style="{StaticResource TextBoxPlusBaseStyle}"
+                        Text="{Binding HttpPort, ValidatesOnDataErrors=True}">
             </hc:TextBox>
             <hc:TextBox hc:InfoElement.ShowClearButton="True" x:Name="TextBoxSokcsPort"  
                     hc:InfoElement.Necessary="True" Margin="12,0,80,0"  VerticalAlignment="Center"
                     hc:InfoElement.Placeholder="1-65535"
                     PreviewKeyDown="TextboxPortnumber_PreviewKeyDown"
                     Grid.Column="1" Grid.Row="1"
-                    Style="{StaticResource TextBoxPlusBaseStyle}">
-                <TextBox.Text>
-                    <Binding x:Name="SocksPortBybinding" Path="SocksPort" UpdateSourceTrigger="Explicit">
-                        <Binding.ValidationRules>
-                            <local:PortNumberValidationRule/>
-                        </Binding.ValidationRules>
-                    </Binding>
-                </TextBox.Text>
+                    Style="{StaticResource TextBoxPlusBaseStyle}"
+                    Text="{Binding SocksPort}">
             </hc:TextBox>
             <Grid Grid.Row="2" Grid.Column="1" Margin="0,0,50,0">
                 <Grid.ColumnDefinitions>
@@ -86,10 +63,10 @@
                 </Grid.ColumnDefinitions>
                 <RadioButton x:Name="RadioByProtocolSocks" Content="SOCKS" 
                              HorizontalAlignment="Center" VerticalAlignment="Center" 
-                             FontSize="15" IsChecked="{Binding RadioSocksChecked,Mode=TwoWay}"/>
+                             FontSize="15" IsChecked="{Binding SocksProxyChecked}"/>
                 <RadioButton x:Name="RadioByProtocolHttp" Content="HTTP" 
                              HorizontalAlignment="Center" VerticalAlignment="Center" 
-                             IsChecked="{Binding RadioHttpChecked, Mode=TwoWay}" FontSize="15" Grid.Column="1"/>
+                             IsChecked="{Binding HttpProxyChecked}" FontSize="15" Grid.Column="1"/>
             </Grid>
             <Grid Grid.Row="3" Grid.Column="1" Margin="0,0,50,0">
                 <Grid.ColumnDefinitions>
@@ -99,19 +76,19 @@
                 <RadioButton Content="启用" HorizontalAlignment="Center" 
                              VerticalAlignment="Center" FontSize="15"
                              x:Name="RadioByHotkeyEnable"
-                             IsChecked="{Binding RadioHotkeyOn, Mode=TwoWay}"/>
+                             IsChecked="{Binding HotKeyEnableChecked}"/>
                 <RadioButton Content="禁用" HorizontalAlignment="Center" 
                              VerticalAlignment="Center" FontSize="15" Grid.Column="1"
-                             x:Name="RadioByHotkeyDisable" 
-                             IsChecked="{Binding RadioHotkeyOff, Mode=TwoWay}"/>
+                             x:Name="RadioByHotkeyDisable"
+                             IsChecked="{Binding HotKeyDisableChecked}"/>
             </Grid>
-            <hc:TextBox hc:InfoElement.ShowClearButton="True"  
+            <hc:TextBox hc:InfoElement.ShowClearButton="True"
                         x:Name="TextboxByHotkeySetting"
                         hc:InfoElement.Necessary="True" Margin="12,0,80,0"  VerticalAlignment="Center"
-                        hc:InfoElement.Placeholder="录入按键"                   
+                        hc:InfoElement.Placeholder="录入按键"
                         Grid.Column="4" Grid.Row="4" FontSize="11"
-                        Text="{Binding HotkeyStr, Mode=TwoWay}"
-                        IsEnabled="{Binding RadioHotkeyOn}"
+                        Text="{Binding HotkeyStr, Mode=OneWay}"
+                        IsEnabled="{Binding HotKeyEnableChecked}"
                         PreviewKeyDown="TextboxByHotkeySetting_PreviewKeyDown"
                         Style="{StaticResource TextBoxPlusBaseStyle}">
             </hc:TextBox>
@@ -120,12 +97,12 @@
                    Text="以下条目开头的地址不经过代理服务器，多个条目使用';'分割"/>
         <hc:TextBox x:Name="TextBoxByPassUrl" TextWrapping="Wrap" Grid.Row="2" hc:InfoElement.ShowClearButton="True"
                     Style="{StaticResource TextBoxPlusBaseStyle}" VerticalContentAlignment="Top"
-                    Margin="15,0,15,0" FontSize="13" Text="{Binding SysProxyBypass, Mode=TwoWay}"/> 
+                    Margin="15,0,15,0" FontSize="13" Text="{Binding SysProxyByPass, Mode=TwoWay}"/>
         <Grid Grid.Row=" 3" Grid.ColumnSpan="1">
             <Button Style="{StaticResource ButtonInfo}" Width="180" 
                     Background="RoyalBlue" Content="保存"
-                    Click="Button_Click"
-                    Margin="0,0,0,0"/>
+                    Margin="0,0,0,0"
+                    Command="{Binding SaveBtnCmd}"/>
         </Grid>
     </Grid>
 
