--- a/MainAppcation/View/SettingWindow.xaml
+++ b/MainAppcation/View/SettingWindow.xaml
@@ -1,16 +1,15 @@
 ﻿<Window x:Class="NetProxyController.SettingWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:hc="https://handyorg.github.io/handycontrol"
-        xmlns:local="clr-namespace:NetProxyController"
-        mc:Ignorable="d"
-        Background="#ebf3ff"
-        ResizeMode="CanMinimize"
-        WindowStartupLocation="CenterScreen"
-        Closing="Window_Closing"
-        Title="参数设置" Height="470" Width="380">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    mc:Ignorable="d"
+    Background="#ebf3ff"
+    ResizeMode="CanMinimize"
+    WindowStartupLocation="CenterScreen"
+    Icon="/Icon/Setting.ico"
+    Title="参数设置" Height="470" Width="380">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -22,6 +21,7 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+
         <Grid Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="150"/>
@@ -33,77 +33,79 @@
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
-
             </Grid.RowDefinitions>
+
             <TextBlock Text="Http端口：" Grid.Row="0" FontSize="18" HorizontalAlignment="Right" VerticalAlignment="Center"/>
             <TextBlock Text="Sokcs端口：" Grid.Row="1" FontSize="18" HorizontalAlignment="Right" VerticalAlignment="Center"/>
             <TextBlock Text="协议：" Grid.Row="2" FontSize="18" HorizontalAlignment="Right" VerticalAlignment="Center"/>
             <TextBlock Text="全局热键开关：" Grid.Row="3" FontSize="18" HorizontalAlignment="Right" VerticalAlignment="Center"/>
             <TextBlock Text="热键设置：" Grid.Row="4" FontSize="18" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            <hc:TextBox hc:InfoElement.ShowClearButton="True" x:Name="TextBoxHttpPort"
-                        hc:InfoElement.Necessary="True" Margin="12,0,80,0"  VerticalAlignment="Center"
-                        hc:InfoElement.Placeholder="IP或域名"
-                        Grid.Column="1" 
-                        PreviewKeyDown="TextboxPortnumber_PreviewKeyDown"
-                        Style="{StaticResource TextBoxPlusBaseStyle}"
-                        Text="{Binding HttpPort, ValidatesOnDataErrors=True}">
-            </hc:TextBox>
-            <hc:TextBox hc:InfoElement.ShowClearButton="True" x:Name="TextBoxSokcsPort"  
+
+            <hc:TextBox hc:InfoElement.ShowClearButton="True"
                     hc:InfoElement.Necessary="True" Margin="12,0,80,0"  VerticalAlignment="Center"
                     hc:InfoElement.Placeholder="1-65535"
+                    Grid.Column="1"
                     PreviewKeyDown="TextboxPortnumber_PreviewKeyDown"
-                    Grid.Column="1" Grid.Row="1"
                     Style="{StaticResource TextBoxPlusBaseStyle}"
-                    Text="{Binding SocksPort}">
-            </hc:TextBox>
+                    Text="{Binding HttpPort, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <hc:TextBox hc:InfoElement.ShowClearButton="True" 
+                hc:InfoElement.Necessary="True" Margin="12,0,80,0"  VerticalAlignment="Center"
+                hc:InfoElement.Placeholder="1-65535"
+                PreviewKeyDown="TextboxPortnumber_PreviewKeyDown"
+                Grid.Column="1" Grid.Row="1"
+                Style="{StaticResource TextBoxPlusBaseStyle}"
+                Text="{Binding SocksPort, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"/>
+
             <Grid Grid.Row="2" Grid.Column="1" Margin="0,0,50,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <RadioButton x:Name="RadioByProtocolSocks" Content="SOCKS" 
-                             HorizontalAlignment="Center" VerticalAlignment="Center" 
-                             FontSize="15" IsChecked="{Binding SocksProxyChecked}"/>
-                <RadioButton x:Name="RadioByProtocolHttp" Content="HTTP" 
-                             HorizontalAlignment="Center" VerticalAlignment="Center" 
-                             IsChecked="{Binding HttpProxyChecked}" FontSize="15" Grid.Column="1"/>
+                <RadioButton Content="SOCKS" 
+                         HorizontalAlignment="Center" VerticalAlignment="Center" 
+                         FontSize="15" IsChecked="{Binding SocksProxyChecked}"/>
+                <RadioButton  Content="HTTP" 
+                         HorizontalAlignment="Center" VerticalAlignment="Center" 
+                         IsChecked="{Binding HttpProxyChecked}" FontSize="15" Grid.Column="1"/>
             </Grid>
+
             <Grid Grid.Row="3" Grid.Column="1" Margin="0,0,50,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <RadioButton Content="启用" HorizontalAlignment="Center" 
-                             VerticalAlignment="Center" FontSize="15"
-                             x:Name="RadioByHotkeyEnable"
-                             IsChecked="{Binding HotKeyEnableChecked}"/>
+                         VerticalAlignment="Center" FontSize="15"
+                         IsChecked="{Binding HotKeyEnableChecked}"/>
                 <RadioButton Content="禁用" HorizontalAlignment="Center" 
-                             VerticalAlignment="Center" FontSize="15" Grid.Column="1"
-                             x:Name="RadioByHotkeyDisable"
-                             IsChecked="{Binding HotKeyDisableChecked}"/>
+                         IsChecked="{Binding HotKeyDisableChecked}"
+                         Grid.Column="1"/>
             </Grid>
+
             <hc:TextBox hc:InfoElement.ShowClearButton="True"
-                        x:Name="TextboxByHotkeySetting"
-                        hc:InfoElement.Necessary="True" Margin="12,0,80,0"  VerticalAlignment="Center"
-                        hc:InfoElement.Placeholder="录入按键"
-                        Grid.Column="4" Grid.Row="4" FontSize="11"
-                        Text="{Binding HotkeyStr, Mode=OneWay}"
-                        IsEnabled="{Binding HotKeyEnableChecked}"
-                        PreviewKeyDown="TextboxByHotkeySetting_PreviewKeyDown"
-                        Style="{StaticResource TextBoxPlusBaseStyle}">
+                    hc:InfoElement.Necessary="True" Margin="12,0,80,0"  VerticalAlignment="Center"
+                    hc:InfoElement.Placeholder="录入按键"
+                    Grid.Column="4" Grid.Row="4" FontSize="11"
+                    Text="{Binding HotkeyStr, Mode=OneWay}"
+                    IsEnabled="{Binding HotKeyEnableChecked}"
+                    PreviewKeyDown="TextboxByHotkeySetting_PreviewKeyDown"
+                    Style="{StaticResource TextBoxPlusBaseStyle}">
             </hc:TextBox>
         </Grid>
+
         <TextBlock Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="15,0,0,0" FontSize="12"
-                   Text="以下条目开头的地址不经过代理服务器，多个条目使用';'分割"/>
-        <hc:TextBox x:Name="TextBoxByPassUrl" TextWrapping="Wrap" Grid.Row="2" hc:InfoElement.ShowClearButton="True"
-                    Style="{StaticResource TextBoxPlusBaseStyle}" VerticalContentAlignment="Top"
-                    Margin="15,0,15,0" FontSize="13" Text="{Binding SysProxyByPass, Mode=TwoWay}"/>
+               Text="以下条目开头的地址不经过代理服务器，多个条目使用';'分割"/>
+        <hc:TextBox TextWrapping="Wrap" Grid.Row="2" hc:InfoElement.ShowClearButton="True"
+                Style="{StaticResource TextBoxPlusBaseStyle}" VerticalContentAlignment="Top"
+                Margin="15,0,15,0" FontSize="13" Text="{Binding SysProxyByPass, Mode=TwoWay}"/>
+
         <Grid Grid.Row=" 3" Grid.ColumnSpan="1">
             <Button Style="{StaticResource ButtonInfo}" Width="180" 
-                    Background="RoyalBlue" Content="保存"
-                    Margin="0,0,0,0"
-                    Command="{Binding SaveBtnCmd}"/>
+                Background="RoyalBlue" Content="保存"
+                Margin="0,0,0,0" IsEnabled="{Binding SaveBtnEnable, Mode=TwoWay}"
+                Command="{Binding SaveBtnCmd}"/>
         </Grid>
-    </Grid>
 
+    </Grid>
 </Window>
