--- a/MainAppcation/View/ServerSettingWindow.xaml
+++ b/MainAppcation/View/ServerSettingWindow.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NetProxyController.View"
         mc:Ignorable="d"
-        Title="ServerSettingWindow" Height="450" Width="800">
+        Title="ServerSettingWindow" Height="700" Width="500">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Frame Grid.Row="1" x:Name="fram">
+            
+        </Frame>
     </Grid>
 </Window>
